fix: make static are items recognizable to openui5 dialogs (#5888)
Issue
When UI5WC ui5-date-picker is opened inside UI5 dialog, click "ESC" wrongly close whole dialog.

Root cause
It's an integration issue between UI5WC Popups and OpenUI5 Popups - the focus never gets to the DatePicker's popover as it's not recognized as an external content by the sap.m.Dialog.

Solution
While we are working on more general, out of the box solution by integrating UI5WC Popups and OpenUI5 Popups, we would like to provide the following solution for the time being:

Forwarding the "data-sap-ui-integration-popup-content" attribute from the component that opens popup to its the static are item, which makes the static are item an external content for the sap.m.Dialog (as the aforementioned attribute is already part of the OpenUI5 logic). When the attribute is present, the focus goes inside the DatePicker's popover and the ESC behaviour works as expected.

Related to: #5634

--- a/packages/main/test/pages/styles/OpenUI5.css
+++ b/packages/main/test/pages/styles/OpenUI5.css
@@ -1,3 +1,7 @@
+html, body, #content {
+    height: 100%;
+}
+
 .openui51auto {
     background-color: var(--sapBackgroundColor);
 }
